other-cel/block-ephemeral-containers/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: block-ephemeral-containers
policies:
- ../block-ephemeral-containers.yaml
resources:
- resource.yaml
results:
- policy: block-ephemeral-containers
  rule: block-ephemeral-containers
  resources: 
  - goodpod01
  - goodpod02
  - goodpod03
  kind: Pod
  result: pass
- policy: block-ephemeral-containers
  rule: block-ephemeral-containers
  resources: 
  - badpod01
  - badpod02
  - badpod03
  kind: Pod
  result: fail
